# aidemoi

./: main.py  models.py  pyproject.toml
src/affogato/: main.py
src/affogato/utils/: client.py  interface.py  prompting.py
src/aidemoi/: main.py
src/aidemoi/lib/: cache.py  client.py  interface.py  models.py  prompting.py
tests/: test_interface.py
